--- a/day57-AnalogClock/css/styles.css
+++ b/day57-AnalogClock/css/styles.css
@@ -12,7 +12,204 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: "Abel", sans-serif;
+  font-family: "Orbitron", sans-serif;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #ecf0f1;
+}
+
+.container {
+  position: relative;
+  padding: 0;
+}
+
+.container .clock--container {
+  width: 30rem;
+  height: 30rem;
+  position: relative;
+  border: 1.5rem solid #ecf0f1;
+  border-radius: 50%;
+  -webkit-box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1) inset, -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1) inset, -1.8rem -1.8rem 3rem 0 rgba(236, 240, 241, 0.1), 1.8rem 1.8rem 3rem 0 rgba(44, 62, 80, 0.1);
+          box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1) inset, -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1) inset, -1.8rem -1.8rem 3rem 0 rgba(236, 240, 241, 0.1), 1.8rem 1.8rem 3rem 0 rgba(44, 62, 80, 0.1);
+}
+
+.container .clock--container .clock {
+  width: 20rem;
+  height: 20rem;
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 500%;
+  -webkit-box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1), -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1), -0.3rem -0.3rem 3rem 0 rgba(236, 240, 241, 0.1), 0.3rem 0.3rem 3rem 0 rgba(44, 62, 80, 0.4);
+          box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1), -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1), -0.3rem -0.3rem 3rem 0 rgba(236, 240, 241, 0.1), 0.3rem 0.3rem 3rem 0 rgba(44, 62, 80, 0.4);
+}
+
+.container .clock--container .clock::after {
+  content: '';
+  width: 2.5rem;
+  height: 2.5rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1), -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1), -0.3rem -0.3rem 3rem 0 rgba(236, 240, 241, 0.1), 0.3rem 0.3rem 3rem 0 rgba(44, 62, 80, 0.4);
+          box-shadow: 1.5rem 1.5rem 3rem 0 rgba(44, 62, 80, 0.1), -1.5rem -1.5rem 3rem 0 rgba(236, 240, 241, 0.1), -0.3rem -0.3rem 3rem 0 rgba(236, 240, 241, 0.1), 0.3rem 0.3rem 3rem 0 rgba(44, 62, 80, 0.4);
+  border-radius: 50%;
+  background: #ecf0f1;
+  z-index: 10;
+}
+
+.container .clock--container .clock .hand {
+  height: 0.2vmin;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform-origin: 0;
+          transform-origin: 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  border-radius: 0.75rem;
+  -webkit-animation: all 0.05s cubic-bezier(0.1, 2.7, 0.58, 1);
+          animation: all 0.05s cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.container .clock--container .clock .hh,
+.container .clock--container .clock .mn,
+.container .clock--container .clock .ss {
+  -webkit-transform-origin: 100%;
+          transform-origin: 100%;
+}
+
+.container .clock--container .clock .hh::before,
+.container .clock--container .clock .mn::before,
+.container .clock--container .clock .ss::before {
+  content: '';
+  height: 0.5rem;
+  position: absolute;
+  top: 50%;
+  -webkit-transform-origin: 100%;
+          transform-origin: 100%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 0 0.2vmin 0.2vmin 0;
+}
+
+.container .clock--container .clock .hh {
+  width: 11.425rem;
+  background: #3498db;
+  left: -7%;
+  z-index: 2;
+}
+
+.container .clock--container .clock .hh::before {
+  width: 2.25rem;
+  top: 0.031rem;
+  right: -3.75rem;
+  background: #3498db;
+}
+
+.container .clock--container .clock .mn {
+  width: 13.425rem;
+  background: #c0392b;
+  top: 48%;
+  left: -16%;
+  z-index: 4;
+}
+
+.container .clock--container .clock .mn::before {
+  width: 2.625rem;
+  top: .1rem;
+  right: -3.75rem;
+  background: #c0392b;
+}
+
+.container .clock--container .clock .ss {
+  width: 13.925rem;
+  background: #16a085;
+  left: -19.195%;
+  z-index: 6;
+}
+
+.container .clock--container .clock .ss::before {
+  width: 2.925rem;
+  top: 0.03rem;
+  right: -3.75rem;
+  background: #16a085;
+}
+
+.container .clock--container .clock .indicators {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+}
+
+.container .clock--container .clock .indicators .dials {
+  width: inherit;
+  height: inherit;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 2.5rem;
+  font-weight: 760;
+  margin: auto;
+  color: #2c3e50;
+}
+
+.container .clock--container .clock .indicators .dials:first-child {
+  -ms-grid-column: 3;
+  grid-column: 3;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  top: 1.5rem;
+  right: -5.4rem;
+}
+
+.container .clock--container .clock .indicators .dials:nth-child(2) {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 4;
+  grid-row: 4;
+  bottom: -5rem;
+}
+
+.container .clock--container .clock .indicators .dials:nth-child(3) {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  top: 1.5rem;
+  left: -5.4rem;
+}
+
+.container .clock--container .clock .indicators .dials:last-child {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  top: -5rem;
 }
 /*# sourceMappingURL=styles.css.map */
