--- a/day58-StopTimerUi/css/styles.scss
+++ b/day58-StopTimerUi/css/styles.scss
@@ -14,7 +14,7 @@ $color-dark: #2c3e50;
 $color-light: #ecf0f1;
 $color-grey: #808090;
 $color-blue: #2900f9;
-$color-red: #e74c3c;
+$color-red: #b02d2d;
 
 * {
     &,
@@ -41,13 +41,13 @@ body {
 }
 
 .container {
-    width: 30rem;
-    height: 45rem;
+    width: $size;
+    // height: 45rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: $radius;
-    box-shadow: $vmin $vmin * .3 $vmin 0 rgba($color-dark, .2), $vmin $vmin * -.3 $vmin 0 rgba($color-dark, .2), $vmin * .2 $vmin $vmin * .2 rgba($color-dark, .4), $vmin * -.2 $vmin $vmin * .2 rgba($color-dark, .4);
+    // border-radius: $radius;
+    // box-shadow: $vmin $vmin * .3 $vmin 0 rgba($color-dark, .2), $vmin $vmin * -.3 $vmin 0 rgba($color-dark, .2), $vmin * .2 $vmin $vmin * .2 rgba($color-dark, .4), $vmin * -.2 $vmin $vmin * .2 rgba($color-dark, .4);
     overflow: hidden;
 
     .stoptimer {
@@ -62,13 +62,13 @@ body {
         &::before,
         &::after {
             content: '';
-            width: $width * .5;
+            width: $width;
             height: $size * .4;
             position: absolute;
             left: 0;
             bottom: 0;
             transform-style: preserve-3d;
-            border-radius: 40% 80% 10% 70% / 30% 50% 90% 85%;
+            border-radius: 90% 80% 50% 70% / 90% 50% 90% 85%;
         }
 
         &::before {
@@ -88,16 +88,17 @@ body {
 
         & .timer {
             width: $size;
-            color: $color-dark;
-            font-size: $padding + 3 * $font-weight;
             padding: 0;
             margin: 0;
+            color: $color-dark;
+            font-size: $padding + 3 * $font-weight;
+            text-align: center;;
             opacity: 0.65
         }
         
         & label {
             display: inline-block;
-            font-size: $padding + $font-weight * 2;
+            font-size: $padding + $font-weight * 5;
             color: $color-grey;
             
             & span {
@@ -105,7 +106,7 @@ body {
                 text-transform: lowercase;
                 font-weight: 800 * $font-weight;
                 &::first-letter {
-                    font-size: $padding * $font-weight + 5
+                    font-size: $padding * $font-weight + 8
                 }
             }
         }
@@ -119,7 +120,7 @@ body {
 
         & .buttons__container button {
             position: relative;
-            font-size: $padding *  $font-weight + 1;
+            font-size: $padding *  $font-weight + 2;
             border: none;
             border-radius: $radius;
             padding: 0 $padding;
